deployment sucks